[package]
name = "attestation_server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
schnorr_fun = { version = "0.10", features = ["serde"] }
rand = "0.8.5"
sha2 = "0.10.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = "0.7.7"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["json"] }
