[package]
name = "bitcoin_scripts"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "scripts"
path = "src/main.rs"

[dependencies]
schnorr_fun = { version = "0.10", features = ["serde"] }
rand = "0.8.5"
sha2 = "0.10.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bitcoin = { version = "0.32.3", features = ["rand-std"] }
hex = "0.4.3"
