[package]
name = "bitcoin_scripts"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "scripts"
path = "src/main.rs"

[dependencies]
rand = "0.8.5"
anyhow = "1.0.90"
bitcoin = { version = "0.32.3", features = ["rand-std"] }
hex = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4.5.20", features = ["derive"] }
schnorr_fun = { version = "0.10", features = ["serde"] }
sha2 = "0.10.8"
